eclipse-workspace/.metadata/.plugins/org.eclipse.cdt.ui/switch case 2.build.log
11:37:49 **** Incremental Build of configuration Debug for project switch case 2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\switch case 2.o" "..\\src\\switch case 2.c" 
..\src\switch case 2.c: In function 'main':
..\src\switch case 2.c:35:1: error: expected declaration or statement at end of input
 }
 ^

11:37:50 Build Failed. 1 errors, 0 warnings. (took 250ms)

